--- a/netlify.toml
+++ b/netlify.toml
@@ -4,6 +4,15 @@
 
 [build.environment]
   NODE_VERSION = "18"
+  NPM_FLAGS = "--no-optional"
+  NPM_CONFIG_PRODUCTION = "false"
+
+# Force fresh builds
+[build.processing]
+  skip_processing = false
+  css = { bundle = true, minify = true }
+  js = { bundle = true, minify = true }
+  html = { pretty_urls = true }
 
 [[headers]]
   for = "/*"
