--- a/next/package.json
+++ b/next/package.json
@@ -51,7 +51,7 @@
     "gray-matter": "^4.0.3",
     "input-otp": "^1.2.4",
     "lucide-react": "^0.462.0",
-    "next": "15.0.3",
+    "next": "^15.1.0",
     "next-sanity": "^11.1.1",
     "next-themes": "^0.3.0",
     "react": "^18.3.1",
@@ -76,7 +76,7 @@
     "@types/react-dom": "^18.3.0",
     "autoprefixer": "^10.4.20",
     "eslint": "^8.57.0",
-    "eslint-config-next": "15.0.3",
+    "eslint-config-next": "^15.1.0",
     "postcss": "^8.4.47",
     "tailwindcss": "^3.4.11",
     "typescript": "^5.5.3"
