Fix Sanity Studio configuration
- Update sanity.config.ts to properly read environment variables
- Add sanity-health API endpoint for debugging
- Update env.example with Sanity configuration
- Fix 'Configuration must contain projectId' error

--- a/next/env.example
+++ b/next/env.example
@@ -5,5 +5,10 @@ NEXT_PUBLIC_SUPABASE_ANON_KEY=your_supabase_anon_key_here
 # OpenAI Configuration
 OPENAI_API_KEY=sk-your_actual_api_key_here
 
+# Sanity Configuration
+NEXT_PUBLIC_SANITY_PROJECT_ID=jutkwtrs
+NEXT_PUBLIC_SANITY_DATASET=production
+SANITY_API_VERSION=2023-10-01
+
 # Optional: Debug mode
 NEXT_PUBLIC_DEBUG=false
