--- a/next/package.json
+++ b/next/package.json
@@ -39,6 +39,7 @@
     "@radix-ui/react-tooltip": "^1.1.4",
     "@react-three/drei": "^9.114.0",
     "@react-three/fiber": "^8.17.10",
+    "@sanity/image-url": "^1.2.0",
     "@sanity/vision": "^4.9.0",
     "@supabase/supabase-js": "^2.52.0",
     "@tanstack/react-query": "^5.56.2",
